# test-socketio

./: README.md  docker-compose.yaml
client/: Dockerfile  main.js  package-lock.json  package.json
sanic/: Dockerfile  main.py  pyproject.toml
server/: Dockerfile  main.py  test_main.py  test_main1.py  test_main2.py
