[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-socketio = "^5.11.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sanic = {git = "https://github.com/jchenatcpacket/sanic-mod.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
